--- a/danusys-platform/src/main/resources/static/css/board.css
+++ b/danusys-platform/src/main/resources/static/css/board.css
@@ -77,9 +77,9 @@
 .search_form h6{margin: 0px 0px 20px;}
 .search_form form{display: flex; flex-direction: column; grid-gap: 14px;}
 .search_form form div{position: relative; display: flex; align-items: center; justify-content: flex-start; grid-gap: 20px;}
-.search_form form div dl{position: relative; display: flex; align-items: center; justify-content: flex-start; grid-gap: 30px; padding: 0px 30px 0px 0px;}
+.search_form form div dl{position: relative; display: flex; align-items: center; justify-content: flex-start; /*grid-gap: 30px; */padding: 0px 30px 0px 0px;}
 .search_form form div dl dt{min-width: 86px; color: #797d87; font-size: 14px; font-weight: bolder;}
-.search_form form div dl dd{display: flex; align-items: center; justify-content: flex-start; grid-gap: 40px; white-space: nowrap;}
+.search_form form div dl dd{display: flex; align-items: center; justify-content: flex-start; /*grid-gap: 40px;*/ white-space: nowrap;}
 .search_form form div dl dd label{display: flex; align-items: center; color: #dee0e4; font-weight: normal;}
 .search_form form div dl span{color: #797d87; font-size: 14px; white-space: nowrap;}
 .search_form form div dl.date_set{grid-gap: 20px;}
