드론 관제 구성중2 (드론, 경로 레이어 임시 테스트 및 오른쪽 패널 연동, cctv 레이어 임시 테스트)

--- a/danusys-platform/src/main/resources/templates/view/pages/mntr.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/mntr.html
@@ -29,6 +29,7 @@
             </ul>
             <ul class="map_options">
                 <li data-value="roadView" title="로드뷰"><img src="/images/default/mapRoadview.svg"></li>
+                <li data-value="cctv" title="cctv"><img src="/images/default/iconCctv.svg"></li>
                 <li data-value="plus" title="확대"><img src="/images/default/mapPlus.svg"></li>
                 <li data-value="minus" title="축소"><img src="/images/default/mapMinus.svg"></li>
                 <li data-value="layer" title="레이어"><img src="/images/default/mapLayer.svg"></li>
