--- a/danusys-platform/src/main/resources/templates/fragments/default/default.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/default.html
@@ -50,5 +50,6 @@
     <script type="text/javascript" src="/js/pages/station.js"></script>
     <script type="text/javascript" src="/js/pages/facility.js"></script>
     <script type="text/javascript" src="/js/pages/dimming.js"></script>
+    <script type="text/javascript" src="/js/pages/faceDetection.js"></script>
 </th:block>
 </html>
