--- a/danusys-platform/src/main/resources/templates/fragments/inqry/nav.html
+++ b/danusys-platform/src/main/resources/templates/fragments/inqry/nav.html
@@ -24,6 +24,9 @@
             <li th:if="${municipality == '45210000'}" id="six">
                 <a href="#six">전력량 조회</a>
             </li>
+            <li th:if="${municipality == '26290000'}" id="faceDetection">
+                <a href="/pages/inqry/faceDetection">용의자 · 실종자 검출</a>
+            </li>
         </ul>
         </th:block>
     </aside>
