--- a/danusys-platform/src/main/resources/templates/view/pages/config/signage.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/signage.html
@@ -21,17 +21,11 @@
                             <dd><span class="count">0</span></dd>
                         </dl>
                         <ul>
-                            <li id="addSignageTemplateBtn" sec:authorize="hasAnyRole('ROLE_config_rw')"><i><img src="/images/default/add.svg"></i>추가</li>
+                            <li id="addSignageTemplateBtn" sec:authorize="hasAnyRole('ROLE_config_rw')">추가</li>
+                            <li id="modSignageTemplateBtn" style="display: none" sec:authorize="hasAnyRole('ROLE_config_rw')">수정</li>
                         </ul>
                     </div>
                     <div class="template_list" id="templateList">
-                        <dl>
-                            <dt>
-                                <input type="checkbox" id="template_1" name="">
-                                <label for="template_1"><span></span>템플릿 01</label>
-                            </dt>
-                            <dd>Rtsp 영상<span>(0x0)</span></dd>
-                        </dl>
                     </div>
                 </article>
                 <article class="signage_layout">
@@ -40,80 +34,46 @@
                             <dt>템플릿 레이아웃 설정</dt>
                         </dl>
                         <ul>
-                            <li>취소</li>
-                            <li id="addSignage">저장</li>
-                            <li>미리보기</li>
+                            <li id="cancelSignageLayoutBtn">취소</li>
+                            <li id="addSignageLayoutProcBtn">저장</li>
+                            <li id="previewSignageBtn">미리보기</li>
                         </ul>
                     </div>
                     <div class="layout_field">
-                        <ul id="templateArea">
-                            목록을 선택해 주세요.
-                            <!--<li><p class="input_height">높이<input type="text">&#37;</p></li>
-                            <li>
-                                <p>종류<span>레이아웃에 들어갈 컨텐츠를 선택해주세요.</span></p>
-                                <select class="contents_kind">
-                                    &lt;!&ndash;<option selected>rtsp 영상</option>&ndash;&gt;
-                                    &lt;!&ndash;<option>대기환경</option>&ndash;&gt;
-                                    &lt;!&ndash;<option>BIS</option>&ndash;&gt;
-                                    <option value="fileSystem">이미지 / 영상 선택</option>
-                                    <option value="urlLink">URL 링크</option>
-                                </select>
-                                <input type="text">
-                            </li>
-                            <li><p class="input_height">높이<input type="text">&#37;</p></li>
-                            <li>
-                                <p>종류<span>레이아웃에 들어갈 컨텐츠를 선택해주세요.</span></p>
-                                <select class="contents_kind">
-                                    <option>rtsp 영상</option>
-                                    <option>대기환경</option>
-                                    <option>BIS</option>
-                                    <option value="fileSystem">이미지 / 영상 선택</option>
-                                    <option value="urlLink">URL 링크</option>
-                                </select>
-                                <div class="fileBox">
-                                    <input class="uploadName" value="첨부파일" placeholder="첨부파일">
-                                    <label for="file">파일찾기</label>
-                                    <input type="file" id="file">
-                                </div>
-                            </li>
-                            <li><p class="input_height">높이<input type="text">&#37;</p></li>
-                            <li>
-                                <p>종류<span>레이아웃에 들어갈 컨텐츠를 선택해주세요.</span></p>
-                                <select class="contents_kind">
-                                    <option>rtsp 영상</option>
-                                    <option>대기환경</option>
-                                    <option>BIS</option>
-                                    <option>이미지 / 영상 선택</option>
-                                    <option selected>URL 링크</option>
-                                </select>
-                                <input type="text">
-                            </li>-->
-                        </ul>
+                        <form id='templateLayoutForm'>
+                            <ul id="templateArea">
+                            </ul>
+                        </form>
                     </div>
                 </article>
             </div>
             <div class="popup signage_popup" id="signagePopup" style="display: none;"><!-- active 시, display: flex; -->
                 <dl class="title">
-                    <dt>사이니지 템플릿 추가</dt>
+                    <dt></dt>
                     <dd><i><img src="/images/default/close.svg"></i></dd>
                 </dl>
                 <div>
                     <fieldset>
-                        <form>
+                        <form id="signageTemplateForm">
                             <dl>
                                 <dt>템플릿 명<span>템플릿 제목을 입력해주세요.</span></dt>
-                                <dd><input type="text" id="templateTitle"></dd>
+                                <dd><input type="text" name="templateName" data-required="true" id="templateName"></dd>
+                            </dl>
+                            <dl>
+                                <dt>템플릿 설명<span>템플릿 설명을 입력해주세요.</span></dt>
+                                <dd><input type="text" name="templateExplain" id="templateExplain"></dd>
                             </dl>
                             <dl>
                                 <dt>레이아웃<span>레이아웃의 줄 수를 설정해주세요.</span></dt>
-                                <dd><input type="text" id="templateCnt" placeholder="0" style="">칸</dd>
+                                <dd><input type="text" name="templateRowCnt" data-required="true" id="templateRowCnt" placeholder="0">칸</dd>
                             </dl>
                         </form>
                     </fieldset>
                 </div>
                 <ul class="bottom">
-                    <li>취소</li>
-                    <li id="addTemplateLayout" sec:authorize="hasAnyRole('ROLE_config_rw')" class="color">추가</li>
+                    <li id="addSignageTemplateProcBtn" data-add="true" sec:authorize="hasAnyRole('ROLE_config_rw')" class="color">추가</li>
+                    <li id="modSignageTemplateProcBtn" data-mod="true" sec:authorize="hasAnyRole('ROLE_config_rw')" class="color">수정</li>
+                    <li id="delSignageTemplateProcBtn" data-mod="true" sec:authorize="hasAnyRole('ROLE_config_rw')">삭제</li>
                 </ul>
             </div>
         </section>
