--- a/danusys-platform/src/main/resources/templates/fragments/config/nav.html
+++ b/danusys-platform/src/main/resources/templates/fragments/config/nav.html
@@ -23,7 +23,7 @@
             <li id="notice">
                 <a href="/pages/config/notice">공지사항</a>
             </li>
-            <li id="signage">
+            <li th:if="${municipality == '47210000'}" id="signage">
                 <a href="/pages/config/signage">사이니지 템플릿</a>
             </li>
         </th:block>
