--- a/danusys-platform/src/main/resources/templates/fragments/default/header.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/header.html
@@ -17,13 +17,22 @@
                 <li sec:authorize="hasAnyRole('ROLE_inqry_rw', 'ROLE_inqry_r-')"  id="inqry">
                     <a href="/pages/inqry/event1">조회/관리</a>
                 </li>
-                <li sec:authorize="hasAnyRole('ROLE_stats_rw', 'ROLE_stats_r-')" th:if="${municipality == '41210000'}" id="stats">
-                    <a href="/pages/stats/statistics_03">통계</a>
-                </li>
                 <li sec:authorize="hasAnyRole('ROLE_stats_rw', 'ROLE_stats_r-')" th:if="${municipality == '45210000'}" id="stats">
                     <a href="/pages/stats/statistics_01">통계</a>
                 </li>
-                <li sec:authorize="hasAnyRole('ROLE_config_rw', 'ROLE_config_r-')" th:if="${municipality == '41210000'}" id="config">
+                <li sec:authorize="hasAnyRole('ROLE_stats_rw', 'ROLE_stats_r-')" th:if="${municipality == '41210000'}" id="stats">
+                    <a href="/pages/stats/statistics_03">통계</a>
+                </li>
+                <li sec:authorize="hasAnyRole('ROLE_stats_rw', 'ROLE_stats_r-')" th:if="${municipality == '47210000'}" id="stats">
+                    <a href="/pages/stats/statistics_04">통계</a>
+                </li>
+                <li sec:authorize="hasAnyRole('ROLE_config_rw', 'ROLE_config_r-')"
+                    th:if="${
+                                municipality == '41210000'
+                                or municipality == '47210000'
+                                or municipality == '45210000'
+                                or municipality == '26290000'}"
+                    id="config">
                     <a href="/pages/config/userAccount">환경설정</a>
                 </li>
             </th:block>
