--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
@@ -3,7 +3,7 @@
     <!-- LNM -->
         <th:block th:with="municipality=${@environment.getProperty('municipality.name')}">
         <!-- 스마트 폴 -->
-        <section id="smartPole" class="menu_fold select">
+        <section th:if="${municipality == '41210000'}" id="smartPole" class="menu_fold">
             <ul class="tab">
                 <li data-value="event" class="active"><a>실시간</a></li>
                 <li data-value="station"><a>개소</a></li>
@@ -195,7 +195,8 @@
 
         </section>
         <!-- 스마트 정류장 -->
-        <section id="smartBusStop" class="menu_fold">
+        <section th:if="${municipality == '41210000'
+                          or municipality == '47210000'}" id="smartBusStop" class="menu_fold select">
             <ul class="tab">
                 <li data-value="event" class="active"><a>실시간</a></li>
                 <li data-value="station"><a>개소</a></li>
@@ -570,7 +571,7 @@
 
         </section>
         <!-- 스마트 분전함 -->
-        <section id="smartPower" class="menu_fold select">
+        <section th:if="${municipality == '45210000'}" id="smartPower" class="menu_fold">
             <ul class="tab">
                 <li data-value="event" class="active"><a>실시간</a></li>
                 <li data-value="station"><a>개소</a></li>
@@ -919,7 +920,7 @@
 
         </section>
         <!-- 드론 관제 -->
-        <section id="drone" class="menu_fold">
+        <section th:if="${municipality == '45210000'}" id="drone" class="menu_fold">
             <ul class="tab">
                 <li data-value="event" class="active"><a>실시간</a></li>
                 <li data-value="station"><a>기체/개소</a></li>
