--- a/danusys-platform/src/main/resources/templates/fragments/default/default.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/default.html
@@ -17,8 +17,8 @@
     <script type="text/javascript" src="/webjars/dayjs/1.10.7/dayjs.min.js" ></script>
 
     <!-- datatable.css-->
-    <link rel="stylesheet" type="text/css" href="/css/plugin/dataTable/datatables.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/plugin/dataTable/select/select.dataTables.css">
+    <link rel="stylesheet" type="text/css" href="/css/plugin/dataTable/datatables.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/plugin/dataTable/select/select.dataTables.css"/>
 
     <!-- datatable.js-->
     <script type="text/javascript" src="/js/plugin/dataTable/datatables.min.js" ></script>
@@ -31,11 +31,15 @@
     <script type=text/javascript src="/js/plugin/air-datepicker/datepicker.ko.js"></script>
 
     <!-- sweetAlert2-->
-    <link rel="stylesheet" type="text/css" href="/webjars/sweetalert2/11.1.2/dist/sweetalert2.min.css">
+    <link rel="stylesheet" type="text/css" href="/webjars/sweetalert2/11.1.2/dist/sweetalert2.min.css"/>
     <script type=text/javascript src="/webjars/sweetalert2/11.1.2/dist/sweetalert2.min.js"></script>
 
+    <!--  Toastr -->
+    <link rel="stylesheet" type="text/css" href="/webjars/toastr/2.1.4/build/toastr.css"/>
+    <script type="text/javascript" src="/webjars/toastr/2.1.4/toastr.js"></script>
+
     <!-- default css files -->
-    <link rel="stylesheet" type="text/css" href="/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="/css/reset.css"/>
 
     <!-- common js-->
     <script type="text/javascript" src="/js/common/common.js" ></script>
